--- a/Alura/JavaScript Programando na linguagem da web/index.html
+++ b/Alura/JavaScript Programando na linguagem da web/index.html
@@ -18,6 +18,8 @@
     <main>
       <section class="container">
         <h2>Meus pacientes</h2>
+        <label for="filtrar-tabela">Filtro:</label>
+        <input type="text" name="filtro" id="filtrar-tabela" placeholder="Digite o nome do paciente">
         <table>
           <thead>
             <tr>
@@ -69,11 +71,16 @@
             </tr>
           </tbody>
         </table>
+        <span id="erro-ajax" class="invisivel">Erro ao buscar os paciente</span>
+        <button id="buscar-paciente" class="botao bto-principal">Buscar Paciente</button>
       </section>
     </main>
 
     <section class="container">
       <h2 id="titulo-form">Adicionar novo paciente</h2>
+      <ul id="mensagens-erro">
+        <li></li>
+      </ul>
       <form id="form-adiciona">
           <div class="grupo">
               <label for="nome">Nome:</label>
@@ -93,9 +100,13 @@
           </div>
   
           <button id="adicionar-paciente" class="botao bto-principal">Adicionar</button>
-      </form>
+      </form>'
   </section>
 
-    <script src="js/principal.js"></script>
+    <script src="js/calcula-imc.js"></script>
+    <script src="js/form.js"></script>
+    <script src="js/remover-paciente.js"></script>
+    <script src="js/filtra.js"></script>
+    <script src="js/buscar-paciente.js"></script>
   </body>
 </html>
